<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.fragments.HomeFragment">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spinkit"
        style="@style/SpinKitView.Large.MultiplePulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/_20sdp"
        app:SpinKit_Color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/location_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updated_at_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_tv" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_150sdp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_70ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <LinearLayout
        android:id="@+id/detailsContainer"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_3sdp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardColor"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/precipitation"
                    android:tintMode="@color/textColor" />

                <Space
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitation"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/precipitation_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardColor"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/cloud"
                    android:tintMode="@color/textColor" />

                <Space
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/cloud_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardColor"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/wind" />

                <Space
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="wind"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/wind_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_10sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardColor"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/pressure" />

                <Space
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/pressure_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardColor"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/humidity" />

                <Space
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardColor"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/uv"
                    android:tintMode="@color/textColor" />

                <Space
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/uv_index"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/uv_index_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <Space
                android:layout_width="@dimen/_10sdp"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>